--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ru.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ru.resx
@@ -477,6 +477,9 @@
   <data name="Clearing_Mesh" xml:space="preserve">
     <value>Выемка Mesh Cache</value>
   </data>
+  <data name="Clearing_Mesh_Cache_word" xml:space="preserve">
+    <value>Выемка Mesh Cache</value>
+  </data>
   <data name="Clearing_Script" xml:space="preserve">
     <value>Выемка кэш сценария. Это может занять много времени.</value>
   </data>
@@ -1203,6 +1206,12 @@
   <data name="Load_Terrain" xml:space="preserve">
     <value>Нагрузка Terrain</value>
   </data>
+  <data name="Local" xml:space="preserve">
+    <value>Местный</value>
+  </data>
+  <data name="Local_Grid" xml:space="preserve">
+    <value>Локальная сетка</value>
+  </data>
   <data name="Local_Search" xml:space="preserve">
     <value>Локальный поиск</value>
   </data>
@@ -1382,6 +1391,9 @@
   </data>
   <data name="No Autobackup" xml:space="preserve">
     <value>No_Autobackup</value>
+  </data>
+  <data name="NoAvatars" xml:space="preserve">
+    <value>Нет Аватары</value>
   </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Ни один человек не на сайте</value>
