--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ca.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ca.resx
@@ -477,6 +477,9 @@
   <data name="Clearing_Mesh" xml:space="preserve">
     <value>Compensació de malla de memòria cau</value>
   </data>
+  <data name="Clearing_Mesh_Cache_word" xml:space="preserve">
+    <value>Compensació de malla de memòria cau</value>
+  </data>
   <data name="Clearing_Script" xml:space="preserve">
     <value>Neteja de la memòria cau de seqüència. Això pot portar molt de temps.</value>
   </data>
@@ -1203,6 +1206,12 @@
   <data name="Load_Terrain" xml:space="preserve">
     <value>Terreny de càrrega</value>
   </data>
+  <data name="Local" xml:space="preserve">
+    <value>local</value>
+  </data>
+  <data name="Local_Grid" xml:space="preserve">
+    <value>xarxa local</value>
+  </data>
   <data name="Local_Search" xml:space="preserve">
     <value>Hi local</value>
   </data>
@@ -1382,6 +1391,9 @@
   </data>
   <data name="No Autobackup" xml:space="preserve">
     <value>No_Autobackup</value>
+  </data>
+  <data name="NoAvatars" xml:space="preserve">
+    <value>sense Avatars</value>
   </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Cap persona està en línia</value>
