--- a/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
@@ -477,6 +477,9 @@
   <data name="Clearing_Mesh" xml:space="preserve">
     <value>Εκκαθάριση ματιών Cache</value>
   </data>
+  <data name="Clearing_Mesh_Cache_word" xml:space="preserve">
+    <value>Εκκαθάριση ματιών Cache</value>
+  </data>
   <data name="Clearing_Script" xml:space="preserve">
     <value>Εκκαθάριση Σενάριο Cache. Αυτό μπορεί να διαρκέσει για μεγάλο χρονικό διάστημα.</value>
   </data>
@@ -1203,6 +1206,12 @@
   <data name="Load_Terrain" xml:space="preserve">
     <value>Έδαφος φορτίο</value>
   </data>
+  <data name="Local" xml:space="preserve">
+    <value>Τοπικός</value>
+  </data>
+  <data name="Local_Grid" xml:space="preserve">
+    <value>Τοπικό δίκτυο</value>
+  </data>
   <data name="Local_Search" xml:space="preserve">
     <value>Τοπική αναζήτηση</value>
   </data>
@@ -1382,6 +1391,9 @@
   </data>
   <data name="No Autobackup" xml:space="preserve">
     <value>No_Autobackup</value>
+  </data>
+  <data name="NoAvatars" xml:space="preserve">
+    <value>δεν Avatars</value>
   </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Κανένα πρόσωπο δεν είναι συνδεδεμένος</value>
