--- a/Installer_Src/Setup DreamWorld/My Project/Resources.es-MX.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.es-MX.resx
@@ -477,6 +477,9 @@
   <data name="Clearing_Mesh" xml:space="preserve">
     <value>Compensación de malla de caché</value>
   </data>
+  <data name="Clearing_Mesh_Cache_word" xml:space="preserve">
+    <value>Compensación de malla de caché</value>
+  </data>
   <data name="Clearing_Script" xml:space="preserve">
     <value>Limpieza de la caché de secuencias de comandos. Esto puede llevar mucho tiempo.</value>
   </data>
@@ -1203,6 +1206,12 @@
   <data name="Load_Terrain" xml:space="preserve">
     <value>Terreno de carga</value>
   </data>
+  <data name="Local" xml:space="preserve">
+    <value>Local</value>
+  </data>
+  <data name="Local_Grid" xml:space="preserve">
+    <value>Red local</value>
+  </data>
   <data name="Local_Search" xml:space="preserve">
     <value>Busqueda local</value>
   </data>
@@ -1382,6 +1391,9 @@
   </data>
   <data name="No Autobackup" xml:space="preserve">
     <value>No_Autobackup</value>
+  </data>
+  <data name="NoAvatars" xml:space="preserve">
+    <value>sin Avatares</value>
   </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Ninguna persona está en línea</value>
