--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
@@ -477,6 +477,9 @@
   <data name="Clearing_Mesh" xml:space="preserve">
     <value>Clearing Mesh Cache</value>
   </data>
+  <data name="Clearing_Mesh_Cache_word" xml:space="preserve">
+    <value>Clearing Mesh Cache</value>
+  </data>
   <data name="Clearing_Script" xml:space="preserve">
     <value>Clearing Ohjelmavälimuisti. Tämä saattaa kestää kauan.</value>
   </data>
@@ -1203,6 +1206,12 @@
   <data name="Load_Terrain" xml:space="preserve">
     <value>kuorma Terrain</value>
   </data>
+  <data name="Local" xml:space="preserve">
+    <value>paikallinen</value>
+  </data>
+  <data name="Local_Grid" xml:space="preserve">
+    <value>paikalliseen sähköverkkoon</value>
+  </data>
   <data name="Local_Search" xml:space="preserve">
     <value>paikallinen haku</value>
   </data>
@@ -1382,6 +1391,9 @@
   </data>
   <data name="No Autobackup" xml:space="preserve">
     <value>No_Autobackup</value>
+  </data>
+  <data name="NoAvatars" xml:space="preserve">
+    <value>ei hahmot</value>
   </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Kukaan ei ole verkossa</value>
