--- a/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
@@ -477,6 +477,9 @@
   <data name="Clearing_Mesh" xml:space="preserve">
     <value>מטמון Mesh סליקה</value>
   </data>
+  <data name="Clearing_Mesh_Cache_word" xml:space="preserve">
+    <value>מטמון Mesh סליקה</value>
+  </data>
   <data name="Clearing_Script" xml:space="preserve">
     <value>מטמון סקריפט סליקה. פעולה זו עשויה להימשך זמן רב.</value>
   </data>
@@ -1203,6 +1206,12 @@
   <data name="Load_Terrain" xml:space="preserve">
     <value>Terrain טען</value>
   </data>
+  <data name="Local" xml:space="preserve">
+    <value>מקומי</value>
+  </data>
+  <data name="Local_Grid" xml:space="preserve">
+    <value>רשת מקומית</value>
+  </data>
   <data name="Local_Search" xml:space="preserve">
     <value>חיפוש Local</value>
   </data>
@@ -1382,6 +1391,9 @@
   </data>
   <data name="No Autobackup" xml:space="preserve">
     <value>No_Autobackup</value>
+  </data>
+  <data name="NoAvatars" xml:space="preserve">
+    <value>אין אווטרים</value>
   </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>אין אדם מחובר</value>
