--- a/Installer_Src/Setup DreamWorld/My Project/Resources.nl-NL.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.nl-NL.resx
@@ -477,6 +477,9 @@
   <data name="Clearing_Mesh" xml:space="preserve">
     <value>Clearing Mesh Cache</value>
   </data>
+  <data name="Clearing_Mesh_Cache_word" xml:space="preserve">
+    <value>Clearing Mesh Cache</value>
+  </data>
   <data name="Clearing_Script" xml:space="preserve">
     <value>Clearing Script Cache. Dit kan een lange tijd in beslag nemen.</value>
   </data>
@@ -1203,6 +1206,12 @@
   <data name="Load_Terrain" xml:space="preserve">
     <value>load Terrain</value>
   </data>
+  <data name="Local" xml:space="preserve">
+    <value>lokaal</value>
+  </data>
+  <data name="Local_Grid" xml:space="preserve">
+    <value>lokale Grid</value>
+  </data>
   <data name="Local_Search" xml:space="preserve">
     <value>Local Search</value>
   </data>
@@ -1382,6 +1391,9 @@
   </data>
   <data name="No Autobackup" xml:space="preserve">
     <value>No_Autobackup</value>
+  </data>
+  <data name="NoAvatars" xml:space="preserve">
+    <value>geen Avatars</value>
   </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Niemand is online</value>
