--- a/Installer_Src/Setup DreamWorld/My Project/Resources.no.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.no.resx
@@ -477,6 +477,9 @@
   <data name="Clearing_Mesh" xml:space="preserve">
     <value>Clearing Mesh Cache</value>
   </data>
+  <data name="Clearing_Mesh_Cache_word" xml:space="preserve">
+    <value>Clearing Mesh Cache</value>
+  </data>
   <data name="Clearing_Script" xml:space="preserve">
     <value>Clearing Script Cache. Dette kan ta lang tid.</value>
   </data>
@@ -1203,6 +1206,12 @@
   <data name="Load_Terrain" xml:space="preserve">
     <value>Load Terreng</value>
   </data>
+  <data name="Local" xml:space="preserve">
+    <value>lokal</value>
+  </data>
+  <data name="Local_Grid" xml:space="preserve">
+    <value>lokal Grid</value>
+  </data>
   <data name="Local_Search" xml:space="preserve">
     <value>Lokalt søk</value>
   </data>
@@ -1382,6 +1391,9 @@
   </data>
   <data name="No Autobackup" xml:space="preserve">
     <value>No_Autobackup</value>
+  </data>
+  <data name="NoAvatars" xml:space="preserve">
+    <value>Ingen avatarer</value>
   </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Ingen person er online</value>
