Deregister_word, Chevron

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -2630,10 +2630,13 @@
     <value>Max Speed (default=1.0)</value>
   </data>
   <data name="ApacheNot_Stopping" xml:space="preserve">
-    <value>Web Server  did not stop</value>
+    <value>Web Server did not stop</value>
   </data>
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>DNS Name &amp; Hypergrid</value>
   </data>
-
+  <data name="Deregister_word" xml:space="preserve">
+    <value>Deregister</value>
+    <comment>New Translation needed</comment>
+  </data>
 </root>
