Error handler if INI fails to load

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -2647,4 +2647,8 @@
     <value>Select</value>
     <comment>New Translation needed</comment>
   </data>
+  <data name="Cannot_locate" xml:space="preserve">
+    <value>Cannot locate Default welcome region</value>
+    <comment>Needs translation</comment>
+  </data>
 </root>
