--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -2654,4 +2654,8 @@
   <data name="server_connection" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\server_connection.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="is_already_running_word" xml:space="preserve">
+    <value>is already running</value>
+    <comment>Needs translation</comment>
+  </data>
 </root>
