--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -278,7 +278,7 @@
   <data name="None" xml:space="preserve">
     <value>None</value>
   </data>
-  <data name="catalan" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="flag_catalan" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\catalan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="If_Enabled_Save_Oars" xml:space="preserve">
@@ -2648,5 +2648,8 @@
   </data>
   <data name="How_Many_Avatars" xml:space="preserve">
     <value>How many Avatars + NPC's can be in a region before the region is shown as Full. The actual value is set in Estate Settings in the viewer.</value>
+  </data>
+  <data name="navigate_open" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\navigate_open.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
